Fixed the bugs - now works!

--- a/software-dist-backend/requirements.txt
+++ b/software-dist-backend/requirements.txt
@@ -1,8 +1,12 @@
-motor
-beanie
-fastapi
-pymongo[srv]
+motor~=3.1.1
+beanie~=1.15.2
+fastapi~=0.86.0
+pymongo[srv]~=4.3.2
 fastapi_auth0
 uvicorn[standard]
-python-dotenv
-boto3
+python-dotenv~=0.21.0
+boto3~=1.26.5
+botocore~=1.29.5
+pydantic~=1.10.2
+python-multipart
+websockets
