--- a/mm-web/package.json
+++ b/mm-web/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.8.2",
     "@mantine/dates": "^5.8.2",
     "@mantine/dropzone": "^5.8.2",
+    "@mantine/ds": "^5.8.3",
     "@mantine/form": "^5.8.2",
     "@mantine/hooks": "^5.8.2",
     "@mantine/modals": "^5.8.2",
