--- a/mm-web/package.json
+++ b/mm-web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@emotion/react": "^11.10.5",
     "@mantine/carousel": "^5.8.2",
     "@mantine/core": "^5.8.2",
@@ -31,7 +32,9 @@
     "embla-carousel-react": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "react-tsparticles": "^2.5.3",
+    "tsparticles": "^2.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
